# Fir

./: .gitignore  CMakeLists.txt  LICENSE
Fir/: CMakeLists.txt
Fir/Containers/: Array.h  Vector.h
Fir/Core/: Config.h  Core.h  Exceptions.h  Macros.h  Utils.h
Fir/Memory/: Allocator.cpp  Allocator.h  ScopedPtr.h
Fir/Strings/: CharTraits.cpp  CharTraits.h  String.cpp  String.h
examples/: CMakeLists.txt  Test.cpp
include/Fir/Core/: Allocator.h  Array.h  CMakeLists.txt  CharTraits.h  Config.h  ErrorList.h  Exception.h  String.h  StringUtils.h  Typedefs.h
source/Fir/Core/: Allocator.cpp  CharTraits.cpp  ErrorList.cpp  String.cpp  StringUtils.cpp
